Reorganized the code and added missing JS files

--- a/cassio/advanced.html
+++ b/cassio/advanced.html
@@ -127,8 +127,10 @@
             </div><!-- /.advanced-menu -->
         </div><!-- /.container -->
         <!-- JavaScript placed at the end of the document so the pages load faster -->
+        <!-- jQuery and Bootstrap JS files -->
         <script src="../js/vendor/jquery-2.1.1.min.js"></script>
         <script src="../js/vendor/bootstrap.min.js"></script>
+        <!-- Custom JS files for this page -->
         <script src="../cassio/header.js"></script>
         <script src="../allen/navbar.js"></script>
     </body>
