--- a/cassio/userpage.html
+++ b/cassio/userpage.html
@@ -59,9 +59,11 @@
             </div><!-- /.user-page -->
         </div><!-- /.container -->
         <!-- JavaScript placed at the end of the document so the pages load faster -->
+        <!-- jQuery and Bootstrap JS files -->
         <script src="../js/vendor/jquery-2.1.1.min.js"></script>
         <script src="../js/vendor/bootstrap.min.js"></script>
-        <script src="header.js"></script>
+        <!-- Custom JS files for this page -->
+        <script src="../cassio/header.js"></script>
         <script src="../allen/navbar.js"></script>
         <script src="../allen/card.js"></script>
     </body>
