--- a/will/submit3.html
+++ b/will/submit3.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html>
     <head>
         <meta charset="utf-8">
@@ -7,12 +6,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="">
         <meta name="author" content="">
-        <link rel="icon" href="">
-        <title>Step 3 | Submit a Recipe | TLDRecipes</title>
-        <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,600' rel='stylesheet' type='text/css'>
-        <link href="../css/font-awesome.min.css" rel="stylesheet">
+
+        <!-- Bootstrap core CSS -->
         <link href="../css/bootstrap.min.css" rel="stylesheet">
+
+        <!-- Custom styles for this page -->
+        <link href="../css/font-awesome.min.css" rel="stylesheet">
         <link href="./submit.css" rel="stylesheet">
+
+        <!-- Custom title -->
+        <title>Step 3 : Submit a Recipe</title>
     </head>
     <body>
         <!-- Navbar Goes Here -->
@@ -21,7 +24,7 @@
                 <div class="title">Submit A Recipe</div>
                 <div class="step">STEP 3</div>
             </div>
-             <section>
+            <section>
                 <div class="goback">
                     <a href="./submit2.html"><i class="fa fa-arrow-circle-left fa-3x"></i><span class="steptext">Previous Step</span></a>
                 </div>
@@ -29,8 +32,13 @@
                     <a href="./submit3.html"><span class="steptext">Finish</span><i class="fa fa-arrow-circle-right fa-3x"></i></a>
                 </div>
             </section>
-        </div>
+        </div><!-- ./container -->
+        <!-- JavaScript placed at the end of the document so the pages load faster -->
+        <!-- jQuery and Bootstrap JS files -->
+        <script src="../js/vendor/jquery-1.11.1.js" type="text/javascript"></script>
+        <script src="../js/vendor/bootstrap.min.js" type="text/javascript"></script>
+        <!-- Custom JS files for this page -->
+        <script src="../cassio/header.js"></script>
+        <script src="../allen/navbar.js"></script>
     </body>
-    <script src="../js/vendor/jquery-1.11.1.js" type="text/javascript"></script>
-    <script src="../js/vendor/bootstrap.min.js" type="text/javascript"></script>
 </html>
