Minor changes to the content

--- a/sid/New_user.html
+++ b/sid/New_user.html
@@ -13,18 +13,19 @@
         <!-- Custom styles for this page -->
         <link href="../sid/stylesheet.css" rel="stylesheet">
 
-        <title>New User | TL;DRecipes</title>
+        <title>New User | TL&#59;DRecipes</title>
+
         <!-- Font loading -->
         <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600" rel="stylesheet" type="text/css">
-        <!-- favicon image -->
+        
+        <!-- Favicon image -->
         <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
         <link rel="icon" href="../img/favicon.ico" type="image/x-icon">
     </head>
     <body>
-        
         <div class="container">
             <form class="form-signin" role="form">
-                <h2 class="form-signin-heading">Sign up for TL;DRecipes</h2>
+                <h2 class="form-signin-heading">Sign up for TL&#59;DRecipes</h2>
                 <input type="email" class="form-control" placeholder="Email address" autofocus="true">
                 <input type="name" class="form-control" placeholder="User Name">
                 <input type="password" class="form-control" placeholder="Password">
