--- a/sid/Sign In Page.html
+++ b/sid/Sign In Page.html
@@ -1,55 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="">
+        <meta name="author" content="">
 
-    <title>Sign in | TL;DRecipes</title>
+        <!-- Bootstrap core CSS -->
+        <link href="../css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Bootstrap core CSS -->
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
+        <!-- Custom styles for this page -->
+        <link href="../sid/stylesheet.css" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
-    <link href="../sid/stylesheet.css" rel="stylesheet">
+        <title>Sign in | TD&#59;DRecipes</title>
 
-    <!--Font-->
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
+        <!-- Font loading -->
+        <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600" rel="stylesheet" type="text/css">
 
+        <!-- Favicon image -->
+        <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="../img/favicon.ico" type="image/x-icon">
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-
-  <body>
-
-    <div class="container">
-
-      <form class="form-signin" role="form">
-
-        <h2 class="form-signin-heading">TL;DRecipes</h2>
-        <input type="email" class="form-control" placeholder="Email address" autofocus >
-        <input type="password" class="form-control" placeholder="Password">
-        <div class="checkbox">
-          <label>
-            <input type="checkbox" value="remember-me"> Remember me
-          </label>
-        </div>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-        <button onclick="window.location.href = '../sid/New_user.html'" class="btn btn-lg btn-primary btn-block" type="button">Create New Account</button>
-
-      </form>
-
-    </div> <!-- /container -->
-
-
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <!-- <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script> -->
-  </body>
+    </head>
+    <body>
+        <div class="container">
+            <form class="form-signin" role="form">
+                <h2 class="form-signin-heading">TL&#59;DRecipes</h2>
+                <input type="email" class="form-control" placeholder="Email address" autofocus="true">
+                <input type="password" class="form-control" placeholder="Password">
+                <div class="checkbox">
+                    <label>
+                        <input type="checkbox" value="remember-me"> Remember me
+                    </label>
+                </div>
+                <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+                <button onclick="window.location.href = '../sid/New_user.html'" class="btn btn-lg btn-primary btn-block" type="button">Create New Account</button>
+            </form>
+        </div> <!-- /container -->
+    </body>
 </html>
