Edited submit.css.  Dropdown box needs to be fixed

--- a/will/submit1.html
+++ b/will/submit1.html
@@ -64,7 +64,7 @@
                             <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
                                 Time <span class="caret"></span>
                             </button>
-                            <ul class="dropdown-menu" role="menu">
+                            <ul id = "dropdown" class="dropdown-menu" role="menu">
                                 <li><a href="#">5 Minutes</a></li>
                                 <li><a href="#">10 Minutes</a></li>
                                 <li><a href="#">15 Minutes</a></li>
@@ -83,36 +83,26 @@
                 <div class="dietary-rest">
                     <label for="dietary-input">Dietary Restrictions</label>
                     <div id="dietary-input">
-                        <label class="checkbox-inline">
+                        <label class="checkbox-inline"></label>
                             <input type="checkbox" id="inlineCheckbox1" value="Veg-option">
-                                <div class="recipe-diet">
                                     <div class="diet-icon vegetarian">V</div>
-                                </div>
-                        </label>
-                        <label class="checkbox-inline">
+
+                        <label class="checkbox-inline"></label>
                             <input type="checkbox" id="inlineCheckbox2" value="option2">
-                                <div class="recipe-diet">
                                     <div class="diet-icon vegan">Vg</div>
-                                </div>
-                        </label>
-                        <label class="checkbox-inline">
+
+                        <label class="checkbox-inline"></label>
                             <input type="checkbox" id="inlineCheckbox3" value="option3">
-                                <div class="recipe-diet">
                                     <div class="diet-icon dairy">Df</div>
-                                </div>
-                        </label>
-                        <label class="checkbox-inline">
+                                
+                        <label class="checkbox-inline"></label>
                             <input type="checkbox" id="inlineCheckbox3" value="option4">
-                                <div class="recipe-diet">
                                     <div class="diet-icon kosher">K</div>
-                                </div>
-                        </label>
-                        <label class="checkbox-inline">
+
+                        <label class="checkbox-inline"></label>
                             <input type="checkbox" id="inlineCheckbox3" value="option5">
-                                <div class="recipe-diet">
                                     <div class="diet-icon gluten">Gl</div>
-                                </div>
-                        </label>
+
                     </div>
                 </div>
             </section>
