added navbar, increased dist from navbar to text

--- a/sid/New_user.html
+++ b/sid/New_user.html
@@ -11,7 +11,7 @@
         <link href="../css/bootstrap.min.css" rel="stylesheet">
 
         <!-- Custom styles for this page -->
-        <link href="../sid/stylesheet.css" rel="stylesheet">
+        <link href="../sid/Sign-stylesheet.css" rel="stylesheet">
 
         <title>New User | TL&#59;DRecipes</title>
 
@@ -33,5 +33,9 @@
                 <button onclick="window.location.href = '../sid/Sign in Page.html'" class="btn btn-lg btn-primary btn-block" type="button">Already a user?</button>
             </form>
         </div> <!-- /container -->
+
+        <script src="../js/vendor/jquery-2.1.1.min.js"></script>
+        <script src="../js/vendor/bootstrap.min.js"></script>
+        <script src="../allen/navbar.js"></script>
     </body>
 </html>
