--- a/sid/Sign In Page.html
+++ b/sid/Sign In Page.html
@@ -11,7 +11,7 @@
         <link href="../css/bootstrap.min.css" rel="stylesheet">
 
         <!-- Custom styles for this page -->
-        <link href="../sid/stylesheet.css" rel="stylesheet">
+        <link href="../sid/Sign-stylesheet.css" rel="stylesheet">
 
         <title>Sign in | TD&#59;DRecipes</title>
 
@@ -26,7 +26,7 @@
     <body>
         <div class="container">
             <form class="form-signin" role="form">
-                <h2 class="form-signin-heading">TL&#59;DRecipes</h2>
+                <h2 class="form-signin-heading">Sign in to TL&#59;DRecipes</h2>
                 <input type="email" class="form-control" placeholder="Email address" autofocus="true">
                 <input type="password" class="form-control" placeholder="Password">
                 <div class="checkbox">
@@ -38,5 +38,9 @@
                 <button onclick="window.location.href = '../sid/New_user.html'" class="btn btn-lg btn-primary btn-block" type="button">Create New Account</button>
             </form>
         </div> <!-- /container -->
+
+        <script src="../js/vendor/jquery-2.1.1.min.js"></script>
+        <script src="../js/vendor/bootstrap.min.js"></script>
+        <script src="../allen/navbar.js"></script>
     </body>
 </html>
