Adjusted JS and added actions to the forms

--- a/sid/New_user.html
+++ b/sid/New_user.html
@@ -13,18 +13,13 @@
         <!-- Custom styles for this page -->
         <link href="../sid/Sign-stylesheet.css" rel="stylesheet">
 
-        <title>New User | TL&#59;DRecipes</title>
+        <!-- Custom title -->
+        <title>New User</title>
 
-        <!-- Font loading -->
-        <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600" rel="stylesheet" type="text/css">
-        
-        <!-- Favicon image -->
-        <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
-        <link rel="icon" href="../img/favicon.ico" type="image/x-icon">
     </head>
     <body>
         <div class="container">
-            <form class="form-signin" role="form">
+            <form class="form-signin" role="form" action="../cassio/userpage.html">
                 <h2 class="form-signin-heading">Sign up for TL&#59;DRecipes</h2>
                 <input type="email" class="form-control" placeholder="Email address" autofocus="true">
                 <input type="name" class="form-control" placeholder="User Name">
@@ -33,9 +28,12 @@
                 <button onclick="window.location.href = '../sid/Sign in Page.html'" class="btn btn-lg btn-primary btn-block" type="button">Already a user?</button>
             </form>
         </div> <!-- /container -->
-
+        <!-- JavaScript placed at the end of the document so the pages load faster -->
+        <!-- jQuery and Bootstrap JS files -->
         <script src="../js/vendor/jquery-2.1.1.min.js"></script>
         <script src="../js/vendor/bootstrap.min.js"></script>
+        <!-- Custom JS files for this page -->
+        <script src="../cassio/header.js"></script>
         <script src="../allen/navbar.js"></script>
     </body>
 </html>
