--- a/cassio/advanced.html
+++ b/cassio/advanced.html
@@ -25,7 +25,7 @@
             <div id="advanced-menu">
                 <h1>Advanced Search</h1>
                 <br>
-                <form id="advance_form" action="">
+                <form id="advance_form" action="../allen/home.html">
                     <h2>Search recipes by user:</h2>
                     <div class="row">
                         <div class="col-lg-6">
@@ -121,9 +121,9 @@
                         </div><!-- /.col-lg-6 -->
                     </div><!-- /.row -->
                     <br>
-                    <a class="btn btn-primary btn-lg" href="#" role="button">Search</a>
+                    <button class="btn btn-lg" type="submit">Search</button>
                     <br>
-                </form>
+                </form><!-- ./form -->
             </div><!-- /.advanced-menu -->
         </div><!-- /.container -->
         <!-- JavaScript placed at the end of the document so the pages load faster -->
