--- a/will/submit1.html
+++ b/will/submit1.html
@@ -42,27 +42,26 @@
             </section>
             <section>
                 <div class="time">
-                    <label for="time-input">Approximate Time:</label>
+                    <label for="time-input">Approximate Time</label>
                     <div id="time-input">
-                                                    <!--                         <label class="radio-inline">
-                                                        <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1"> 1
-                                                    </label>
-                                                    <label class="radio-inline">
-                                                        <input type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2"> 2
-                                                    </label>
-                                                    <label class="radio-inline">
-                                                        <input type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3"> 3
-                                                    </label> 
-                                                    <label class="radio-inline">
-                                                        <input type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3"> 4
-                                                    </label> 
-                                                    <label class="radio-inline">
-                                                        <input type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3"> 5
-                                                    </label>  -->
+                        <!--                         <label class="radio-inline">
+                            <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1"> 1
+                        </label>
+                        <label class="radio-inline">
+                            <input type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2"> 2
+                        </label>
+                        <label class="radio-inline">
+                            <input type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3"> 3
+                        </label> 
+                        <label class="radio-inline">
+                            <input type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3"> 4
+                        </label> 
+                        <label class="radio-inline">
+                            <input type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3"> 5
+                        </label>  -->
                         <!-- Single button -->
                         <div class="btn-group">
-                            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-                                Time <span class="caret"></span>
+                            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">Select a Time  <span class="caret"></span>
                             </button>
                             <ul id = "dropdown" class="dropdown-menu" role="menu">
                                 <li><a href="#">5 Minutes</a></li>
