Linked the "Sign Up" button to the right page

--- a/allen/home.html
+++ b/allen/home.html
@@ -41,7 +41,7 @@
 				<h1>Welcome to TL;DR Recipes!</h1>
 				<p>A simple way to make and use recipes.</p>
 				<p>Search for your favorite recipes here.</p>
-				<p><a class="btn btn-primary btn-lg" href="../sid/Sign In Page.html" role="button">Sign Up</a></p>
+				<p><a class="btn btn-primary btn-lg" href="../sid/New_user.html" role="button">Sign Up</a></p>
 			</div>
 		</div>
 
