Sent CSS and JS files to the right folders

--- a/allen/card.html
+++ b/allen/card.html
@@ -28,7 +28,7 @@
 		<script src="../allen/navbar.js"></script>
 
 		<!-- Load head elements -->
-		<script src="../cassio/header.js"></script>
+		<script src="../js/header.js"></script>
 
 		<!-- Load recipe listings -->
 		<script src="../allen/card.js"></script>
