--- a/allen/navbar.html
+++ b/allen/navbar.html
@@ -25,7 +25,7 @@
 		<script src="../allen/navbar.js"></script>
 
 		<!-- Load head elements -->
-		<script src="../cassio/header.js"></script>
+		<script src="../js/header.js"></script>
 
 	</head>
 
