--- a/cassio/userpage.html
+++ b/cassio/userpage.html
@@ -12,7 +12,7 @@
 
         <!-- Custom styles for this page -->
         <link href="../css/style.css" rel="stylesheet">
-        <link href="./userpage.css" rel="stylesheet">
+        <link href="../css/userpage.css" rel="stylesheet">
 
         <!-- Custom title -->
         <title>pastafreak123</title>
@@ -63,7 +63,7 @@
         <script src="../js/vendor/jquery-2.1.1.min.js"></script>
         <script src="../js/vendor/bootstrap.min.js"></script>
         <!-- Custom JS files for this page -->
-        <script src="../cassio/header.js"></script>
+        <script src="../js/header.js"></script>
         <script src="../allen/navbar.js"></script>
         <script src="../allen/card.js"></script>
     </body>
