--- a/sid/New_user.html
+++ b/sid/New_user.html
@@ -33,7 +33,7 @@
         <script src="../js/vendor/jquery-2.1.1.min.js"></script>
         <script src="../js/vendor/bootstrap.min.js"></script>
         <!-- Custom JS files for this page -->
-        <script src="../cassio/header.js"></script>
+        <script src="../js/header.js"></script>
         <script src="../allen/navbar.js"></script>
     </body>
 </html>
