--- a/allen/browse.html
+++ b/allen/browse.html
@@ -31,7 +31,7 @@
 		<script src="../allen/card.js"></script>
 
 		<!-- Load head elements -->
-		<script src="../cassio/header.js"></script>
+		<script src="../js/header.js"></script>
 
 		<!-- Load scripts for this page -->
 		<script src="../allen/browse.js"></script>
