--- a/allen/home.html
+++ b/allen/home.html
@@ -1,70 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<title>Welcome to TL&#59;DRecipes</title>
+        <title>Welcome to TL&#59;DRecipes</title>
 
-		<!-- Bootstrap core CSS -->
-		<link href="../css/bootstrap.min.css" rel="stylesheet">
+        <!-- Bootstrap core CSS -->
+        <link href="../css/bootstrap.min.css" rel="stylesheet">
 
-		<!-- Font loading -->
-		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
+        <!-- Font loading -->
+        <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600" rel="stylesheet" type="text/css">
 
-		<!-- Load global stylesheet -->
-		<link href="../allen/global.css" rel="stylesheet">
+        <!-- Load global stylesheet -->
+        <link href="../allen/global.css" rel="stylesheet">
 
-		<!-- Custom styles for this template -->
-		<link href="../allen/home.css" rel="stylesheet">
+        <!-- Custom styles for this template -->
+        <link href="../allen/home.css" rel="stylesheet">
 
-		<!-- Bootstrap core JavaScript -->
-		<!-- Placed at the end of the document so the pages load faster -->
-		<script src="../js/vendor/jquery-2.1.1.min.js"></script>
-		<script src="../js/vendor/bootstrap.min.js"></script>
+    </head>
 
-		<!-- Load the navbar -->
-		<script src="../allen/navbar.js"></script>
+    <body>
+        <div class="background-image">
+            <div class="jumbotron">
+                <h1>Welcome to TL;DR Recipes!</h1>
+                <p>A simple way to make and use recipes.</p>
+                <p>Search for your favorite recipes here.</p>
+                <p><a class="btn btn-primary btn-lg" href="../sid/New_user.html" role="button">Sign Up</a></p>
+            </div>
+        </div>
 
-		<!-- Load recipe listings -->
-		<script src="../allen/card.js"></script>
+        <div class="section">
+            <div class="container">
+                <h2>Recently Submitted</h2>
+            </div>
+            <div class="recipes" data-length="6"></div>
+        </div>
 
-		<!-- Load head elements -->
-		<script src="../cassio/header.js"></script>
+        <div class="section">
+            <div class="container">
+                <h2>Most Popular</h2>
+            </div>
+            <div class="recipes" data-length="6"></div>
+        </div>
 
-	</head>
+        <div class="section">
+            <div class="container">
+                <h2>Highest Success Rate</h2>
+            </div>
+            <div class="recipes" data-length="6"></div>
+        </div>
 
-	<body>
-		<div class="background-image">
-			<div class="jumbotron">
-				<h1>Welcome to TL;DR Recipes!</h1>
-				<p>A simple way to make and use recipes.</p>
-				<p>Search for your favorite recipes here.</p>
-				<p><a class="btn btn-primary btn-lg" href="../sid/New_user.html" role="button">Sign Up</a></p>
-			</div>
-		</div>
+        <!-- Bootstrap core JavaScript -->
+        <!-- Placed at the end of the document so the pages load faster -->
+        <script src="../js/vendor/jquery-2.1.1.min.js"></script>
+        <script src="../js/vendor/bootstrap.min.js"></script>
 
-		<div class="section">
-			<div class="container">
-				<h2>Recently Submitted</h2>
-			</div>
-			<div class="recipes" data-length="6"></div>
-		</div>
+        <!-- Load the navbar -->
+        <script src="../allen/navbar.js"></script>
 
-		<div class="section">
-			<div class="container">
-				<h2>Most Popular</h2>
-			</div>
-			<div class="recipes" data-length="6"></div>
-		</div>
+        <!-- Load recipe listings -->
+        <script src="../allen/card.js"></script>
 
-		<div class="section">
-			<div class="container">
-				<h2>Highest Success Rate</h2>
-			</div>
-			<div class="recipes" data-length="6"></div>
-		</div>
+        <!-- Load head elements -->
+        <script src="../js/header.js"></script>
 
-	</body>
+    </body>
 </html>
