--- a/cassio/advanced.html
+++ b/cassio/advanced.html
@@ -12,7 +12,7 @@
 
         <!-- Custom styles for this page -->
         <link href="../css/style.css" rel="stylesheet">
-        <link href="./advanced.css" rel="stylesheet">
+        <link href="../css/advanced.css" rel="stylesheet">
 
         <!-- Custom title -->
         <title>Advanced Search</title>
@@ -131,7 +131,7 @@
         <script src="../js/vendor/jquery-2.1.1.min.js"></script>
         <script src="../js/vendor/bootstrap.min.js"></script>
         <!-- Custom JS files for this page -->
-        <script src="../cassio/header.js"></script>
+        <script src="../js/header.js"></script>
         <script src="../allen/navbar.js"></script>
     </body>
 </html>
