--- a/will/recipe.html
+++ b/will/recipe.html
@@ -15,6 +15,6 @@
         <!-- JavaScript placed at the end of the document so the pages load faster -->
         <script src="../js/vendor/bootstrap.min.js" type="text/javascript"></script>
         <script src="../js/vendor/jquery-1.11.1.js" type="text/javascript"></script>
-        <script src="../cassio/header.js"></script>
+        <script src="../js/header.js"></script>
     </body>
 </html>
