--- a/will/submit1.html
+++ b/will/submit1.html
@@ -121,7 +121,7 @@
         <script src="../js/vendor/bootstrap.min.js" type="text/javascript"></script>
         <script src="../js/vendor/dropzone.js" type="text/javascript"></script>
         <script src="../js/vendor/jquery-2.1.1.min.js"></script>
-        <script src="../cassio/header.js" type="text/javascript"></script>
+        <script src="../js/header.js" type="text/javascript"></script>
         <script src="../allen/navbar.js"></script>
     </body>
 </html>
