--- a/will/submit3.html
+++ b/will/submit3.html
@@ -38,7 +38,7 @@
         <script src="../js/vendor/jquery-1.11.1.js" type="text/javascript"></script>
         <script src="../js/vendor/bootstrap.min.js" type="text/javascript"></script>
         <!-- Custom JS files for this page -->
-        <script src="../cassio/header.js"></script>
+        <script src="../js/header.js"></script>
         <script src="../allen/navbar.js"></script>
     </body>
 </html>
