--- a/allen/home.html
+++ b/allen/home.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <title>Welcome to TL&#59;DRecipes</title>
+        <title>Welcome!</title>
 
         <!-- Bootstrap core CSS -->
         <link href="../css/bootstrap.min.css" rel="stylesheet">
@@ -52,18 +52,19 @@
             <div class="recipes" data-length="6"></div>
         </div>
 
-        <!-- Bootstrap core JavaScript -->
-        <!-- Placed at the end of the document so the pages load faster -->
+        <!-- JavaScript placed at the end of the document so the pages load faster -->
+        <!-- jQuery and Bootstrap JS files -->
         <script src="../js/vendor/jquery-2.1.1.min.js"></script>
         <script src="../js/vendor/bootstrap.min.js"></script>
 
-        <!-- Load the navbar -->
+        <!-- Custom JS files for this page -->
+        <!-- Loads the navbar -->
         <script src="../allen/navbar.js"></script>
 
-        <!-- Load recipe listings -->
+        <!-- Loads recipe listings -->
         <script src="../allen/card.js"></script>
 
-        <!-- Load head elements -->
+        <!-- Loads head elements -->
         <script src="../js/header.js"></script>
 
     </body>
