Minor changes; Deleted Cassio folder

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="index.html">Home</a></li>
                         <li><a href="allen/allen.html" target="_blank">Allen</a></li>
-                        <li><a href="cassio/advanced.html" target="_blank">Cassio</a></li>
+                        <li><a href="advanced.html" target="_blank">Cassio</a></li>
                         <li><a href="sid/sid.html" target="_blank">Sidhart</a></li>
                         <li><a href="will/william.html" target="_blank">William</a></li>
                     </ul>
