--- a/sid/new-user.html
+++ b/sid/new-user.html
@@ -14,22 +14,18 @@
         <link href="../sid/Sign-stylesheet.css" rel="stylesheet">
 
         <!-- Custom title -->
-        <title>Sign in</title>
+        <title>New User</title>
 
     </head>
     <body>
         <div class="container">
-            <form class="form-signin" role="form" action="../allen/home.html">
-                <h2 class="form-signin-heading">Sign in to TL&#59;DRecipes</h2>
+            <form class="form-signin" role="form" action="../userpage.html">
+                <h2 class="form-signin-heading">Sign up for TL&#59;DRecipes</h2>
                 <input type="email" class="form-control" placeholder="Email address" autofocus="true">
+                <input type="name" class="form-control" placeholder="User Name">
                 <input type="password" class="form-control" placeholder="Password">
-                <div class="checkbox">
-                    <label>
-                        <input type="checkbox" value="remember-me"> Remember me
-                    </label>
-                </div>
-                <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-                <button class="btn btn-lg btn-primary btn-block" type="button" onclick="window.location.href = '../sid/New_user.html'">Create New Account</button>
+                <button class="btn btn-lg btn-primary btn-block" type="submit">Sign up</button>
+                <button onclick="window.location.href = '../sid/sign-in.html'" class="btn btn-lg btn-primary btn-block" type="button">Already a user?</button>
             </form>
         </div> <!-- /container -->
         <!-- JavaScript placed at the end of the document so the pages load faster -->
