Moved files to appropriate directories, updated paths

--- a/browse.html
+++ b/browse.html
@@ -8,33 +8,33 @@
 		<title>Browse</title>
 
 		<!-- Bootstrap core CSS -->
-		<link href="../css/bootstrap.min.css" rel="stylesheet">
+		<link href="css/bootstrap.min.css" rel="stylesheet">
 
 		<!-- Font loading -->
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
 
 		<!-- Load global stylesheet -->
-		<link href="../allen/global.css" rel="stylesheet">
+		<link href="css/global.css" rel="stylesheet">
 		
 		<!-- Custom styles for this template -->
-		<link href="../allen/browse.css" rel="stylesheet">
+		<link href="css/browse.css" rel="stylesheet">
 
 		<!-- Bootstrap core JavaScript -->
 		<!-- Placed at the end of the document so the pages load faster -->
-		<script src="../js/vendor/jquery-2.1.1.min.js"></script>
-		<script src="../js/vendor/bootstrap.min.js"></script>
+		<script src="js/vendor/jquery-2.1.1.min.js"></script>
+		<script src="js/vendor/bootstrap.min.js"></script>
 
 		<!-- Load the navbar -->
-		<script src="../allen/navbar.js"></script>
+		<script src="js/navbar.js"></script>
 
 		<!-- Load recipe listings -->
-		<script src="../allen/card.js"></script>
+		<script src="js/card.js"></script>
 
 		<!-- Load head elements -->
-		<script src="../js/header.js"></script>
+		<script src="js/header.js"></script>
 
 		<!-- Load scripts for this page -->
-		<script src="../allen/browse.js"></script>
+		<script src="js/browse.js"></script>
 
 	</head>
 
