--- a/allen/card.html
+++ b/allen/card.html
@@ -14,10 +14,10 @@
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
 
 		<!-- Load global stylesheet -->
-		<link href="../allen/global.css" rel="stylesheet">
+		<link href="../css/global.css" rel="stylesheet">
 
 		<!-- Custom styles for this template -->
-		<link href="../allen/browse.css" rel="stylesheet">
+		<link href="../css/browse.css" rel="stylesheet">
 
 		<!-- Bootstrap core JavaScript -->
 		<!-- Placed at the end of the document so the pages load faster -->
@@ -25,13 +25,13 @@
 		<script src="../js/vendor/bootstrap.min.js"></script>
 
 		<!-- Load the navbar -->
-		<script src="../allen/navbar.js"></script>
+		<script src="../js/navbar.js"></script>
 
 		<!-- Load head elements -->
 		<script src="../js/header.js"></script>
 
 		<!-- Load recipe listings -->
-		<script src="../allen/card.js"></script>
+		<script src="../js/card.js"></script>
 
 	</head>
 
