--- a/allen/navbar.html
+++ b/allen/navbar.html
@@ -14,7 +14,7 @@
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
 
 		<!-- Load global stylesheet -->
-		<link href="../allen/global.css" rel="stylesheet">
+		<link href="../css/global.css" rel="stylesheet">
 
 		<!-- Bootstrap core JavaScript -->
 		<!-- Placed at the end of the document so the pages load faster -->
@@ -22,7 +22,7 @@
 		<script src="../js/vendor/bootstrap.min.js"></script>
 
 		<!-- Load the navbar -->
-		<script src="../allen/navbar.js"></script>
+		<script src="../js/navbar.js"></script>
 
 		<!-- Load head elements -->
 		<script src="../js/header.js"></script>
